cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@entity_hierarchy.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/entity_hierarchy.cedarschema
---
{
  "": {
    "actions": {},
    "entityTypes": {
      "Admin": {
        "memberOfTypes": [
          "User"
        ]
      },
      "SuperAdmin": {
        "memberOfTypes": [
          "Admin"
        ]
      },
      "User": {}
    }
  }
}
