cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@entity_references.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/entity_references.cedarschema
---
{
  "": {
    "actions": {},
    "entityTypes": {
      "Document": {
        "shape": {
          "attributes": {
            "editors": {
              "element": {
                "name": "User",
                "type": "Entity"
              },
              "type": "Set"
            },
            "group": {
              "name": "Group",
              "type": "Entity"
            },
            "owner": {
              "name": "User",
              "type": "Entity"
            }
          },
          "type": "Record"
        }
      },
      "Group": {},
      "User": {}
    }
  }
}
