cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@entity_tags.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/entity_tags.cedarschema
---
{
  "": {
    "actions": {},
    "entityTypes": {
      "Document": {
        "shape": {
          "attributes": {
            "title": {
              "type": "__cedar::String"
            }
          },
          "type": "Record"
        },
        "tags": {
          "attributes": {
            "classification": {
              "type": "__cedar::String"
            },
            "department": {
              "type": "__cedar::String"
            }
          },
          "type": "Record"
        }
      },
      "User": {
        "shape": {
          "attributes": {
            "name": {
              "type": "__cedar::String"
            }
          },
          "type": "Record"
        },
        "tags": {
          "type": "__cedar::String"
        }
      }
    }
  }
}
