cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@entity_with_attributes.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/entity_with_attributes.cedarschema
---
{
  "": {
    "actions": {},
    "entityTypes": {
      "User": {
        "shape": {
          "attributes": {
            "active": {
              "type": "__cedar::Bool"
            },
            "age": {
              "type": "__cedar::Long"
            },
            "name": {
              "type": "__cedar::String"
            }
          },
          "type": "Record"
        }
      }
    }
  }
}
