cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@extension_types.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/extension_types.cedarschema
---
{
  "": {
    "actions": {},
    "entityTypes": {
      "User": {
        "shape": {
          "attributes": {
            "a": {
              "type": "String"
            },
            "balance": {
              "type": "decimal"
            },
            "id": {
              "type": "Long"
            },
            "ip": {
              "type": "ipaddr"
            }
          },
          "type": "Record"
        }
      }
    }
  }
}
