cedar-policy/src/ffi/snapshots/cedar_policy__ffi__convert__test__schema_resolution_round_trip@multiple_namespaces.snap
---
source: cedar-policy/src/ffi/convert.rs
expression: resolved_json
input_file: cedar-policy/src/ffi/test_schemas/multiple_namespaces.cedarschema
---
{
  "App1": {
    "actions": {
      "view": {
        "appliesTo": {
          "principalTypes": [
            "App1::User"
          ],
          "resourceTypes": [
            "App1::User"
          ]
        }
      }
    },
    "entityTypes": {
      "User": {}
    }
  },
  "App2": {
    "actions": {
      "edit": {
        "appliesTo": {
          "principalTypes": [
            "App1::User"
          ],
          "resourceTypes": [
            "App2::Document"
          ]
        }
      }
    },
    "entityTypes": {
      "Document": {}
    }
  }
}
